--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="about">About</string>
     <string name="crear_pelicula">Crear Pelicula</string>
     <string name="help">Help</string>
-    <string name="borrar_pelicula">Borrar Pelicula</string>
+    <string name="borrar_pelicula">Borrar Peliculas</string>
 
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
