--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,23 @@
 <resources>
     <string name="app_name">Pelis cutres</string>
-    <string name="textview">TextView</string>
-    <string name="about">About</string>
+    <string name="textview" translatable="false">TextView</string>
+    <string name="about" translatable="false">About</string>
+    <string name="app_name_about" translatable="false">Pelis cutres - About</string>
     <string name="crear_pelicula">Crear Pelicula</string>
-    <string name="help">Help</string>
+    <string name="help" translatable="false">Help</string>
     <string name="borrar_pelicula">Borrar Peliculas</string>
 
-    <string name="drawer_open">Open navigation drawer</string>
-    <string name="drawer_close">Close navigation drawer</string>
-    <string name="search">Search</string>
-    <string name="drag_title">Films</string>
-    <string name="drag_menu1">Home</string>
+    <string name="drawer_open" translatable="false">Open navigation drawer</string>
+    <string name="drawer_close" translatable="false">Close navigation drawer</string>
+    <string name="search" translatable="false">Search</string>
+    <string name="drag_title" translatable="false">Films</string>
+    <string name="drag_menu1" translatable="false">Home</string>
     <string name="drag_menu2">Añadir Film</string>
-    <string name="drag_menu3">MENU3</string>
-    <string name="drag_menu4">MENU4</string>
-    <string name="drag_menu5">MENU5</string>
+    <string name="drag_menu3" translatable="false">MENU3</string>
+    <string name="drag_menu4" translatable="false">MENU4</string>
+    <string name="drag_menu5" translatable="false">MENU5</string>
     <string name="drag_menu6">Configuración</string>
-    <string name="drag_menu7">MENU7</string>
+    <string name="drag_menu7" translatable="false">MENU7</string>
+    <string name="versi_n_de_la_aplicaci_n">Versión de la aplicación</string>
+    <string name="versionids">1.0</string>
 </resources>
