--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="drag_menu6">Configuración</string>
     <string name="drag_menu7" translatable="false">Salir</string>
     <string name="drag_menu8" translatable="false">Calificar</string>
+
+    <string name="title_rating" translatable="false">Calificar</string>
     <string name="versi_n_de_la_aplicaci_n">Versión de la aplicación</string>
     <string name="versionids">1.0</string>
 </resources>
