--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,20 +41,20 @@
     <string name="help_menu1" translatable="false">Funcionamiento general de la aplicación</string>
     <string name="help_menu2" translatable="false">Cómo navegar entre las opciones</string>
     <string name="help_menu3" translatable="false">Ver títulos de films</string>
-    <string name="help_menu4" translatable="false">Ver libreria de films</string>
+    <string name="help_menu4" translatable="false">Ver librería de films</string>
     <string name="help_menu5" translatable="false">Cómo añadir films</string>
     <string name="help_menu6" translatable="false">Cómo eliminar films</string>
     <string name="help_menu7" translatable="false">Búsqueda de protagonista</string>
     <string name="help_menu8" translatable="false">Calificar films</string>
 
     <string name="help_menu1_text1" translatable="false">La aplicación ofrece diversas funcionalidades para gestionar
-         una filmoteca personal para el usuario. En donde cada usuariopuede crear, eliminar, recalificar y buscar protagonistas.</string>
+         una filmoteca personal para el usuario. En donde el usuario puede crear, eliminar, recalificar films y buscar protagonistas.</string>
     <string name="help_menu1_subtitulo1" translatable="false">Método de acceso a las funcionalidades</string>
-    <string name="help_menu1_text2" translatable="false">Mediante el botón de switch ubicado en la esquina derecha
-        de la aplicación se puede acceder al menú de las funciones que puedes realizar en la aplicación.</string>
+    <string name="help_menu1_text2" translatable="false">Mediante el botón de switch ubicado en la esquina izquierda superior
+        de la aplicación se puede acceder a la panel lateral en donde se encuentra un menú de las funciones que puede realizar en la aplicación.</string>
     <string name="help_menu1_subtitulo2" translatable="false">Funcionalidades</string>
-    <string name="help_menu1_text3" translatable="false">En la aplicación se ofrece diversas funcionalidades para una gestión
-        de una filmoteca personal</string>
+    <string name="help_menu1_text3" translatable="false">Las diversas funcionalidades de la aplicación ayuda al usuario
+        a gestionar una filmoteca personal.</string>
     <string name="help_menu1_subtitulo4" translatable="false">Ver Títulos</string>
     <string name="help_menu1_text5" translatable="false">Vista principal de la aplicación, dónde
     se puede visualizar un listado de los títulos almacenados en la aplicación. En esta vista también se puede
@@ -67,21 +67,22 @@
      ubicado en la esquina superior derecha de la aplicación.</string>
     <string name="help_menu1_subtitulo6" translatable="false">Añadir Film</string>
     <string name="help_menu1_text7" translatable="false">Existe la opción de añadir un nuevo film
-        a tu filmoteca. Los métodos de acceso es por medio de la pantalla lateral o mediante un icono en el actionBar </string>
+        a tu filmoteca. Los métodos de acceso es por medio de la panel lateral o mediante un icono en el actionBar. Se ha de rellenar
+        los campos necesarios y una vez los datos sean correctos presione el botón de la esquina superior derecha para dar de alta el nuevo film.</string>
     <string name="help_menu1_subtitulo7" translatable="false">Eliminar Film</string>
-    <string name="help_menu1_text8" translatable="false">Para eliminar un film de la filmoteca existe el menú de la pantalla lateral
-        que te mostrará un listado de los datos de los films donde pulsando seleccionas los films que desees eliminar.</string>
+    <string name="help_menu1_text8" translatable="false">Para eliminar un film de la filmoteca existe el menú de la panel lateral
+        que mostrará un listado de los datos de los films, dónde manteniendo pulsado un film seleccionas los items que se desea eliminar.</string>
     <string name="help_menu1_subtitulo8" translatable="false">Buscar protagonista</string>
     <string name="help_menu1_text9" translatable="false">Es posible hacer búsquedas de protagonistas. Según el protagonista se
         mostrará un listado de los títulos donde participó como protagonista. Los métodos de acceso se encuentran en el menú de la
-        pantalla lateral y con el icono de la lupa en el actionBar.</string>
+        panel lateral y con el icono de la lupa en el actionBar.</string>
     <string name="help_menu1_subtitulo9" translatable="false">Calificar Film</string>
     <string name="help_menu1_text10" translatable="false">Se tiene la opción de recalificar un film. Al crear un film
         se le otorga una calificación personal, más adelante se pude volver a modificar la nota críetica del film.</string>
     <string name="help_menu1_text13" translatable="false">Para poder cambiar la nota crítica de un film se puede
-        acceder al menú Calificar ubicado en la pantalla lateral. O manteniendo pulsado un título en la pantalla de Títulos.</string>
+        acceder al menú Calificar ubicado en la panel lateral. O manteniendo pulsado un título en la pantalla de Títulos.</string>
     <string name="help_menu1_subtitulo10" translatable="false">Salir de la aplicación</string>
-    <string name="help_menu1_text11" translatable="false">En la pantalla lateral hay una opción de salir de la aplicación.</string>
+    <string name="help_menu1_text11" translatable="false">En la panel lateral hay una opción de salir de la aplicación.</string>
 
     <string name="help_menu2_text1" translatable="false">El panel lateral de navegación es un panel en el que se muestran
         las principales opciones de navegación de la app en el borde izquierdo de la pantalla. La mayor parte del tiempo
@@ -132,7 +133,7 @@
     <string name="help_menu5_text3" translatable="false"> Para dar de alta después de rellenar los campos
         debe presionar el botón de la esquina superior derecha.</string>
     <string name="help_menu5_subtitulo2" translatable="false">Métodos de Acceso</string>
-     <string name="help_menu5_text4" translatable="false">Para crear un film se puede acceder desde el menú de la pantalla lateral odesde
+     <string name="help_menu5_text4" translatable="false">Para crear un film se puede acceder desde el menú de la panel lateral o desde
          acceso directo en el actionBar disponible en las pantallas de Títulos, Librería y Calificar.</string>
 
     <string name="help_menu6_text1" translatable="false">Puedes eliminar films de la aplicación. Existe dos
@@ -142,8 +143,8 @@
         a la pantalla donde se muestra la librería de la aplicación y donde al pulsar en los films
         se entra en modo borrar.</string>
     <string name="help_menu6_subtitulo2" translatable="false">Método 2: desde la pantalla de Librería</string>
-    <string name="help_menu6_text3" translatable="false">En la pantalla de Librería tambien se puede entrar
-    en modo borrar, manteniendo pulsando un film.</string>
+    <string name="help_menu6_text3" translatable="false">En la pantalla de Librería también se puede entrar
+    en modo borrar, manteniendo pulsado un film.</string>
 
     <string name="help_menu7_text1" translatable="false">Puedes buscar un protagonista de cualquier film
         que esté almacenado en la aplicación. Al buscar un protagonista se mostrará una lista de títulos
@@ -164,8 +165,8 @@
     para deshacer el cambio, este método aparece como un mensaje en la parte inferior de la pnatalla.</string>
     <string name="help_menu8_subtitulo2" translatable="false">Métodos de acceso al cambio de calificación</string>
     <string name="help_menu8_text3" translatable="false">Existe dos métodos posibles para cambiar la calificación de un film.</string>
- <string name="help_menu8_subtitulo3" translatable="false">Método desde el menú de la pantalla lateral</string>
-    <string name="help_menu8_text4" translatable="false">Desde la pantalla lateral se puede acceder al menú de Calificar, dónde se mostrará una lista de los
+ <string name="help_menu8_subtitulo3" translatable="false">Método desde el menú de la panel lateral</string>
+    <string name="help_menu8_text4" translatable="false">Desde la panel lateral se puede acceder al menú de Calificar, dónde se mostrará una lista de los
         títulos guardados en la aplicación. Para cambiar la nota crítica solo hace falta pulsar en el título del
         film que se quiere modificar.</string>
     <string name="help_menu8_subtitulo4" translatable="false">Método desde la pantalla de Títulos</string>
@@ -173,6 +174,7 @@
         calificación de un film manteniendo pulsado el título que se desea cambiar.</string>
 
     <string name="title_rating" translatable="false">Calificar</string>
+    <string name="titulo_search_films" translatable="false">Films</string>
     <string name="title_help" translatable="false">Menu de Ayuda</string>
     <string name="busquedaVacia" translatable="false">No hay protagonista con el nombre buscado.</string>
     <string name="search_label">buscar actor o actriz ...</string>
